fix for scroll on ios

--- a/src/external/widget/widget.css
+++ b/src/external/widget/widget.css
@@ -45,10 +45,11 @@ html.seniorly-page-scroll-locked body {
   -ms-transform: translateY(-50%) translateX(-50%);
   background-color: #fff;
   width: 100%;
-  height: 100%;
-  max-height: 90%;
+  height: calc(100% - 2rem);
+  max-height: 45rem;
   border-radius: 0.1875rem;
-  overflow: hidden;
+  overflow:auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 @media screen and (min-width: 48rem) {
